------------------------------
       Version 6.11
------------------------------

  . added a font size option to the "insert large letters"
    menu item

------------------------------
       Version 6.10
------------------------------

  . reduce the number of nested panel% objects to attempt to work around
    a bug in the Windows 10 Creators Update

  . misc bug fixes

------------------------------
       Version 6.9
------------------------------

  . add the "remove unused requires" refactoring

  . improved support for #lang-based tooling

  . add opt-in toolbar buttons

  . add support for #lang-specified keybindings

  . bug fixes and minor performance improvements

------------------------------
       Version 6.8
------------------------------

  . new logo

  . bug fixes

------------------------------
       Version 6.7
------------------------------

  . improvements in the way DrRacket's sets up the printing parameters
    to make the "#lang" variants of the teaching languages work better

  . misc bug fixes

------------------------------
       Version 6.6
------------------------------

  . misc bug fixes

  . cmd-9 always goes to the last tab, even when there are fewer than 9

------------------------------
       Version 6.5
------------------------------

  . changed the indentation strategy for sequences that begin with
    keywords to assume that they are part of some internal structure
    of something that, in general looks like
    
      (#:x 1 #:y 2 #:z 3)
    
    and so prefer to indent like this:
    
      (#:x 1
       #:y 2
       #:z 3)
    
    instead of like this:
    
      (#:x 1
           #:y 2
           #:z 3)

  . the break button aborts the program the second time it is 
    clicked on and its label changes to indicate what it will do

------------------------------
       Version 6.4
------------------------------

  . sped up scrolling

  . added submodules to the popup menu navigator